<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtS"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contextClickable="true"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/txtTituloApp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:autoSizeTextType="none"
        android:text="@string/txt_titulo"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNomeAluno"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:hint="@string/txt_hint_primeiro_nome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloApp" />

    <EditText
        android:id="@+id/txtSobrenomeAluno"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/txt_hint_sobrenome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeAluno" />

    <EditText
        android:id="@+id/txtTelefoneAluno"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txt_hint_telefone"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCursoDesejado" />

    <EditText
        android:id="@+id/txtCursoDesejado"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/txt_hint_curso_desejado"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSobrenomeAluno" />


    <TextView
        android:id="@+id/textListSpiner"
        android:layout_width="384dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="Selecione um Curso..."
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefoneAluno" />

    <Spinner
        android:id="@+id/txtSpinnerCursos"
        android:layout_width="376dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toTopOf="@+id/btnlimpar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textListSpiner"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnlimpar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:text="@string/txt_botao_limpar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefoneAluno" />

    <Button
        android:id="@+id/btnsalvar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_botao_salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnlimpar"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefoneAluno" />

    <Button
        android:id="@+id/btnfinalizar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:text="@string/txt_botao_finalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlimpar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />



</androidx.constraintlayout.widget.ConstraintLayout>